--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <main>
         <div>
-            <p>AVISO: Os arquivos aqui espostos são de valores públicos compartilhados pelos alunos da Escola Professora Francisca Maria. E o mesmo só é permitido consultas. venda ou distribuição do conteúdo é ilegal.</p>
+            <p><b>AVISO:</b> Os arquivos aqui espostos são de valores públicos compartilhados pelos alunos da Escola Professora Francisca Maria. E o mesmo só é permitido consultas. Venda ou distribuição do conteúdo é proibido.</p>
         </div>
         
         <h2>Acervo listado em ordem alfabética:</h2>
@@ -40,17 +40,17 @@
     </main>
 
     <footer>
-        <h3>Endereço da Escola:</h3>
+        <h3>Sobre a Escola:</h3>
         <ul>
             <li>Ensino Fundamental 6° ao 9° ano e EJA</li>
             <li>E-mail: fmssantos18@gmail.com</li>
             <li>Rua: Joaquim Vidal, s/n - Rua nova - Tenente Ananias - RN</li>
-            <li>CEP: 59955-000 / INEP: 24084069 / CNPJ: 09582.822/0001-00</li>
+            <li>CEP: 59955-000 &#124; INEP: 24084069 &#124; CNPJ: 09582.822/0001-00</li>
         </ul>
 
         <hr>
 
-        <h4>&copy; - <a href="https://genilsoncavalcante.github.io/"> Genilson Cavalcante</a></h4>
+        <h4>&copy; - <a href="https://genilsoncavalcante.github.io/" title="Portifólio do Desenvolvedor" target="_blank"> Genilson Cavalcante</a></h4>
     </footer>
     
 </body>
