melhorias na parte de lerMais

--- a/main.html
+++ b/main.html
@@ -14,8 +14,14 @@
     </header>
 
     <main>
+        <!--SALVO
         <div>
-            <p><b>ATENÇÃO:</b> Os livros aqui expostos são de domínio público e propriedade intelectual, compartilhados pelos(as) alun@s e professores(os) da Escola Professora Francisca Maria da Silveira Santos de forma totalmente gratuita. Na qual os mesmo possuem de suas versão física e estão upando para essa plataforma com objetivo de oferecer exclusivamente para uso parcial em pesquisas e estudos acadêmicos. Venda ou distribuição do conteúdo é ilegal.</p>
+            <p><b>ATENÇÃO:</b> Os livros aqui expostos são de domínio público e propriedade intelectual, compartilhados pelos(as) alun@s e professores(os) da Escola Professora Francisca Maria da Silveira Santos de forma totalmente gratuita. <span id="lerMais" onClick="lerMais()">Ler mais.</span></p>
+        </div>
+        -->
+
+        <div>
+            <p><strong>ATENÇÃO:</strong> Os livros aqui expostos são de domínio público e propriedade intelectual, compartilhados pelos(as) alun@s e professores(os) da Escola Professora Francisca Maria da Silveira Santos de forma totalmente gratuita. <span id="lerMais" onClick='lerMais()'>Ler mais.</span> <span id="sumir" style="display: none;">Na qual os mesmo possuem de suas versão física e estão upando para essa plataforma com objetivo de oferecer exclusivamente para uso parcial em pesquisas e estudos acadêmicos. Venda ou distribuição do conteúdo é ilegal.</span> <span id="lerMenos" onClick='lerMais()' style="display: none;">Ler menos.</span></p>
         </div>
         
         <h2>Acervo listado em ordem alfabética:</h2>
@@ -53,5 +59,7 @@
         <h4>&copy; - <a href="https://genilsoncavalcante.github.io/" title="Portfólio do Desenvolvedor" target="_blank"> Genilson Cavalcante</a></h4>
     </footer>
     
+    <script src="assets/js/script.js"></script>
+
 </body>
 </html>
