Adicionando fundo preto programado

--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
         -->
 
         <div>
-            <p><strong>ATENÇÃO:</strong> Os livros aqui expostos são de domínio público e propriedade intelectual, compartilhados pelos(as) alun@s e professores(os) da Escola Professora Francisca Maria da Silveira Santos de forma totalmente gratuita. <span id="lerMais" onClick='lerMais()'>Ler mais.</span> <span id="sumir" style="display: none;">Na qual os mesmo possuem de suas versão física e estão upando para essa plataforma com objetivo de oferecer exclusivamente para uso parcial em pesquisas e estudos acadêmicos. Venda ou distribuição do conteúdo é ilegal.</span> <span id="lerMenos" onClick='lerMais()' style="display: none;">Ler menos.</span></p>
+            <p><strong>ATENÇÃO:</strong> Os livros aqui expostos são de domínio público e propriedade intelectual, compartilhados pelos(as) alun@s e professores(os) da Escola Professora Francisca Maria da Silveira Santos de forma totalmente gratuita. <span id="lerMais" onClick='lerMais()'>Ler mais.</span> <span id="aparece-desaparece" style="display: none;">Na qual os mesmo possuem de suas versão física e estão upando para essa plataforma com objetivo de oferecer exclusivamente para uso parcial em pesquisas e estudos acadêmicos. Venda ou distribuição do conteúdo é ilegal.</span> <span id="lerMenos" onClick='lerMais()' style="display: none;">Ler menos.</span></p>
         </div>
         
         <h2>Acervo listado em ordem alfabética:</h2>
