--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
     
                 <div>
-                    <input id="btn-submit" type="submit" onClick='verificacao()'>
+                    <input id="btn-submit" type="submit" value="Enviar" onClick='verificacao()'>
                 </div>
                 
             </form>
